Fixed the flickering by making some of the heights statically defined

--- a/public/style.css
+++ b/public/style.css
@@ -39,11 +39,6 @@ html {
   /* 2 */
 }
 
-html, body {
-  width: 100vw;
-  height: 100vh;
-}
-
 /*
 Sections
 ========
